tests/temp/parser.output
Terminals unused in grammar

    RAW_TEXT


Grammar

    0 $accept: module $end

    1 module: module_item
    2       | module module_item

    3 module_item: define_clause
    4            | if_clause
    5            | reference

    6 $@1: ε

    7 module_item: INCLUDE $@1 QSTRG

    8 $@2: ε

    9 module_item: ERROR $@2 QSTRG

   10 $@3: ε

   11 module_item: MESSAGE $@3 QSTRG

   12 reference: REFERENCE ref_parm

   13 ref_parm_list_item: NAME
   14                   | reference
   15                   | QSTRG
   16                   | NUMBER

   17 ref_parm_list: ref_parm_list_item
   18              | ref_parm_list ',' ref_parm_list_item

   19 ref_parm: ε
   20         | '(' ')'
   21         | '(' ref_parm_list ')'

   22 define: DEFINE

   23 define_clause: define NAME
   24              | define NAME BLOCK
   25              | define NAME '(' def_parm_list ')' BLOCK

   26 def_parm_list: NAME
   27              | def_parm_list ',' NAME

   28 $@4: ε

   29 if_clause: IF $@4 '(' expression ')' BLOCK else_clause

   30 else: ELSE

   31 else_clause_item: else '(' expression ')' BLOCK

   32 else_clause_item_list: else_clause_item
   33                      | else_clause_item_list else_clause_item

   34 final_else_clause: else '(' ')' BLOCK
   35                  | else BLOCK

   36 else_clause: else_clause_item_list
   37            | else_clause_item_list final_else_clause
   38            | final_else_clause

   39 expression: reference
   40           | NUMBER
   41           | NAME
   42           | expression EQU expression
   43           | expression NEQU expression
   44           | expression LT expression
   45           | expression GT expression
   46           | expression LTE expression
   47           | expression GTE expression
   48           | expression AND expression
   49           | expression OR expression
   50           | NOT expression
   51           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 20 21 25 29 31 34 51
    ')' (41) 20 21 25 29 31 34 51
    ',' (44) 18 27
    error (256)
    DEFINE (258) 22
    IF (259) 29
    ELSE (260) 30
    INCLUDE (261) 7
    MESSAGE (262) 11
    ERROR (263) 9
    EQU (264) 42
    NEQU (265) 43
    LT (266) 44
    GT (267) 45
    LTE (268) 46
    GTE (269) 47
    AND (270) 48
    OR (271) 49
    NOT (272) 50
    QSTRG <str> (273) 7 9 11 15
    RAW_TEXT <str> (274)
    NAME <str> (275) 13 23 24 25 26 27 41
    BLOCK <str> (276) 24 25 29 31 34 35
    REFERENCE <str> (277) 12
    NUMBER <num> (278) 16 40


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    module (28)
        on left: 1 2
        on right: 0 2
    module_item (29)
        on left: 3 4 5 7 9 11
        on right: 1 2
    $@1 (30)
        on left: 6
        on right: 7
    $@2 (31)
        on left: 8
        on right: 9
    $@3 (32)
        on left: 10
        on right: 11
    reference (33)
        on left: 12
        on right: 5 14 39
    ref_parm_list_item (34)
        on left: 13 14 15 16
        on right: 17 18
    ref_parm_list (35)
        on left: 17 18
        on right: 18 21
    ref_parm (36)
        on left: 19 20 21
        on right: 12
    define (37)
        on left: 22
        on right: 23 24 25
    define_clause (38)
        on left: 23 24 25
        on right: 3
    def_parm_list (39)
        on left: 26 27
        on right: 25 27
    if_clause (40)
        on left: 29
        on right: 4
    $@4 (41)
        on left: 28
        on right: 29
    else (42)
        on left: 30
        on right: 31 34 35
    else_clause_item (43)
        on left: 31
        on right: 32 33
    else_clause_item_list (44)
        on left: 32 33
        on right: 33 36 37
    final_else_clause (45)
        on left: 34 35
        on right: 37 38
    else_clause (46)
        on left: 36 37 38
        on right: 29
    expression (47)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 29 31 42 43 44 45 46 47 48 49 50 51


State 0

    0 $accept: • module $end

    DEFINE     shift, and go to state 1
    IF         shift, and go to state 2
    INCLUDE    shift, and go to state 3
    MESSAGE    shift, and go to state 4
    ERROR      shift, and go to state 5
    REFERENCE  shift, and go to state 6

    module         go to state 7
    module_item    go to state 8
    reference      go to state 9
    define         go to state 10
    define_clause  go to state 11
    if_clause      go to state 12


State 1

   22 define: DEFINE •

    $default  reduce using rule 22 (define)


State 2

   29 if_clause: IF • $@4 '(' expression ')' BLOCK else_clause

    $default  reduce using rule 28 ($@4)

    $@4  go to state 13


State 3

    7 module_item: INCLUDE • $@1 QSTRG

    $default  reduce using rule 6 ($@1)

    $@1  go to state 14


State 4

   11 module_item: MESSAGE • $@3 QSTRG

    $default  reduce using rule 10 ($@3)

    $@3  go to state 15


State 5

    9 module_item: ERROR • $@2 QSTRG

    $default  reduce using rule 8 ($@2)

    $@2  go to state 16


State 6

   12 reference: REFERENCE • ref_parm

    '('  shift, and go to state 17

    $default  reduce using rule 19 (ref_parm)

    ref_parm  go to state 18


State 7

    0 $accept: module • $end
    2 module: module • module_item

    $end       shift, and go to state 19
    DEFINE     shift, and go to state 1
    IF         shift, and go to state 2
    INCLUDE    shift, and go to state 3
    MESSAGE    shift, and go to state 4
    ERROR      shift, and go to state 5
    REFERENCE  shift, and go to state 6

    module_item    go to state 20
    reference      go to state 9
    define         go to state 10
    define_clause  go to state 11
    if_clause      go to state 12


State 8

    1 module: module_item •

    $default  reduce using rule 1 (module)


State 9

    5 module_item: reference •

    $default  reduce using rule 5 (module_item)


State 10

   23 define_clause: define • NAME
   24              | define • NAME BLOCK
   25              | define • NAME '(' def_parm_list ')' BLOCK

    NAME  shift, and go to state 21


State 11

    3 module_item: define_clause •

    $default  reduce using rule 3 (module_item)


State 12

    4 module_item: if_clause •

    $default  reduce using rule 4 (module_item)


State 13

   29 if_clause: IF $@4 • '(' expression ')' BLOCK else_clause

    '('  shift, and go to state 22


State 14

    7 module_item: INCLUDE $@1 • QSTRG

    QSTRG  shift, and go to state 23


State 15

   11 module_item: MESSAGE $@3 • QSTRG

    QSTRG  shift, and go to state 24


State 16

    9 module_item: ERROR $@2 • QSTRG

    QSTRG  shift, and go to state 25


State 17

   20 ref_parm: '(' • ')'
   21         | '(' • ref_parm_list ')'

    QSTRG      shift, and go to state 26
    NAME       shift, and go to state 27
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 28
    ')'        shift, and go to state 29

    reference           go to state 30
    ref_parm_list_item  go to state 31
    ref_parm_list       go to state 32


State 18

   12 reference: REFERENCE ref_parm •

    $default  reduce using rule 12 (reference)


State 19

    0 $accept: module $end •

    $default  accept


State 20

    2 module: module module_item •

    $default  reduce using rule 2 (module)


State 21

   23 define_clause: define NAME •
   24              | define NAME • BLOCK
   25              | define NAME • '(' def_parm_list ')' BLOCK

    BLOCK  shift, and go to state 33
    '('    shift, and go to state 34

    $default  reduce using rule 23 (define_clause)


State 22

   29 if_clause: IF $@4 '(' • expression ')' BLOCK else_clause

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 40


State 23

    7 module_item: INCLUDE $@1 QSTRG •

    $default  reduce using rule 7 (module_item)


State 24

   11 module_item: MESSAGE $@3 QSTRG •

    $default  reduce using rule 11 (module_item)


State 25

    9 module_item: ERROR $@2 QSTRG •

    $default  reduce using rule 9 (module_item)


State 26

   15 ref_parm_list_item: QSTRG •

    $default  reduce using rule 15 (ref_parm_list_item)


State 27

   13 ref_parm_list_item: NAME •

    $default  reduce using rule 13 (ref_parm_list_item)


State 28

   16 ref_parm_list_item: NUMBER •

    $default  reduce using rule 16 (ref_parm_list_item)


State 29

   20 ref_parm: '(' ')' •

    $default  reduce using rule 20 (ref_parm)


State 30

   14 ref_parm_list_item: reference •

    $default  reduce using rule 14 (ref_parm_list_item)


State 31

   17 ref_parm_list: ref_parm_list_item •

    $default  reduce using rule 17 (ref_parm_list)


State 32

   18 ref_parm_list: ref_parm_list • ',' ref_parm_list_item
   21 ref_parm: '(' ref_parm_list • ')'

    ','  shift, and go to state 41
    ')'  shift, and go to state 42


State 33

   24 define_clause: define NAME BLOCK •

    $default  reduce using rule 24 (define_clause)


State 34

   25 define_clause: define NAME '(' • def_parm_list ')' BLOCK

    NAME  shift, and go to state 43

    def_parm_list  go to state 44


State 35

   50 expression: NOT • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 45


State 36

   41 expression: NAME •

    $default  reduce using rule 41 (expression)


State 37

   40 expression: NUMBER •

    $default  reduce using rule 40 (expression)


State 38

   51 expression: '(' • expression ')'

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 46


State 39

   39 expression: reference •

    $default  reduce using rule 39 (expression)


State 40

   29 if_clause: IF $@4 '(' expression • ')' BLOCK else_clause
   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    EQU   shift, and go to state 47
    NEQU  shift, and go to state 48
    LT    shift, and go to state 49
    GT    shift, and go to state 50
    LTE   shift, and go to state 51
    GTE   shift, and go to state 52
    AND   shift, and go to state 53
    OR    shift, and go to state 54
    ')'   shift, and go to state 55


State 41

   18 ref_parm_list: ref_parm_list ',' • ref_parm_list_item

    QSTRG      shift, and go to state 26
    NAME       shift, and go to state 27
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 28

    reference           go to state 30
    ref_parm_list_item  go to state 56


State 42

   21 ref_parm: '(' ref_parm_list ')' •

    $default  reduce using rule 21 (ref_parm)


State 43

   26 def_parm_list: NAME •

    $default  reduce using rule 26 (def_parm_list)


State 44

   25 define_clause: define NAME '(' def_parm_list • ')' BLOCK
   27 def_parm_list: def_parm_list • ',' NAME

    ','  shift, and go to state 57
    ')'  shift, and go to state 58


State 45

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression
   50           | NOT expression •

    $default  reduce using rule 50 (expression)


State 46

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression
   51           | '(' expression • ')'

    EQU   shift, and go to state 47
    NEQU  shift, and go to state 48
    LT    shift, and go to state 49
    GT    shift, and go to state 50
    LTE   shift, and go to state 51
    GTE   shift, and go to state 52
    AND   shift, and go to state 53
    OR    shift, and go to state 54
    ')'   shift, and go to state 59


State 47

   42 expression: expression EQU • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 60


State 48

   43 expression: expression NEQU • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 61


State 49

   44 expression: expression LT • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 62


State 50

   45 expression: expression GT • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 63


State 51

   46 expression: expression LTE • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 64


State 52

   47 expression: expression GTE • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 65


State 53

   48 expression: expression AND • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 66


State 54

   49 expression: expression OR • expression

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38

    reference   go to state 39
    expression  go to state 67


State 55

   29 if_clause: IF $@4 '(' expression ')' • BLOCK else_clause

    BLOCK  shift, and go to state 68


State 56

   18 ref_parm_list: ref_parm_list ',' ref_parm_list_item •

    $default  reduce using rule 18 (ref_parm_list)


State 57

   27 def_parm_list: def_parm_list ',' • NAME

    NAME  shift, and go to state 69


State 58

   25 define_clause: define NAME '(' def_parm_list ')' • BLOCK

    BLOCK  shift, and go to state 70


State 59

   51 expression: '(' expression ')' •

    $default  reduce using rule 51 (expression)


State 60

   42 expression: expression • EQU expression
   42           | expression EQU expression •
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LTE  shift, and go to state 51
    GTE  shift, and go to state 52

    $default  reduce using rule 42 (expression)


State 61

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   43           | expression NEQU expression •
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    LT   shift, and go to state 49
    GT   shift, and go to state 50
    LTE  shift, and go to state 51
    GTE  shift, and go to state 52

    $default  reduce using rule 43 (expression)


State 62

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   44           | expression LT expression •
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    $default  reduce using rule 44 (expression)


State 63

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   45           | expression GT expression •
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    $default  reduce using rule 45 (expression)


State 64

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   46           | expression LTE expression •
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    $default  reduce using rule 46 (expression)


State 65

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   47           | expression GTE expression •
   48           | expression • AND expression
   49           | expression • OR expression

    $default  reduce using rule 47 (expression)


State 66

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   48           | expression AND expression •
   49           | expression • OR expression

    EQU   shift, and go to state 47
    NEQU  shift, and go to state 48
    LT    shift, and go to state 49
    GT    shift, and go to state 50
    LTE   shift, and go to state 51
    GTE   shift, and go to state 52

    $default  reduce using rule 48 (expression)


State 67

   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression
   49           | expression OR expression •

    EQU   shift, and go to state 47
    NEQU  shift, and go to state 48
    LT    shift, and go to state 49
    GT    shift, and go to state 50
    LTE   shift, and go to state 51
    GTE   shift, and go to state 52
    AND   shift, and go to state 53

    $default  reduce using rule 49 (expression)


State 68

   29 if_clause: IF $@4 '(' expression ')' BLOCK • else_clause

    ELSE  shift, and go to state 71

    else                   go to state 72
    else_clause_item       go to state 73
    else_clause_item_list  go to state 74
    final_else_clause      go to state 75
    else_clause            go to state 76


State 69

   27 def_parm_list: def_parm_list ',' NAME •

    $default  reduce using rule 27 (def_parm_list)


State 70

   25 define_clause: define NAME '(' def_parm_list ')' BLOCK •

    $default  reduce using rule 25 (define_clause)


State 71

   30 else: ELSE •

    $default  reduce using rule 30 (else)


State 72

   31 else_clause_item: else • '(' expression ')' BLOCK
   34 final_else_clause: else • '(' ')' BLOCK
   35                  | else • BLOCK

    BLOCK  shift, and go to state 77
    '('    shift, and go to state 78


State 73

   32 else_clause_item_list: else_clause_item •

    $default  reduce using rule 32 (else_clause_item_list)


State 74

   33 else_clause_item_list: else_clause_item_list • else_clause_item
   36 else_clause: else_clause_item_list •
   37            | else_clause_item_list • final_else_clause

    ELSE  shift, and go to state 71

    $default  reduce using rule 36 (else_clause)

    else               go to state 72
    else_clause_item   go to state 79
    final_else_clause  go to state 80


State 75

   38 else_clause: final_else_clause •

    $default  reduce using rule 38 (else_clause)


State 76

   29 if_clause: IF $@4 '(' expression ')' BLOCK else_clause •

    $default  reduce using rule 29 (if_clause)


State 77

   35 final_else_clause: else BLOCK •

    $default  reduce using rule 35 (final_else_clause)


State 78

   31 else_clause_item: else '(' • expression ')' BLOCK
   34 final_else_clause: else '(' • ')' BLOCK

    NOT        shift, and go to state 35
    NAME       shift, and go to state 36
    REFERENCE  shift, and go to state 6
    NUMBER     shift, and go to state 37
    '('        shift, and go to state 38
    ')'        shift, and go to state 81

    reference   go to state 39
    expression  go to state 82


State 79

   33 else_clause_item_list: else_clause_item_list else_clause_item •

    $default  reduce using rule 33 (else_clause_item_list)


State 80

   37 else_clause: else_clause_item_list final_else_clause •

    $default  reduce using rule 37 (else_clause)


State 81

   34 final_else_clause: else '(' ')' • BLOCK

    BLOCK  shift, and go to state 83


State 82

   31 else_clause_item: else '(' expression • ')' BLOCK
   42 expression: expression • EQU expression
   43           | expression • NEQU expression
   44           | expression • LT expression
   45           | expression • GT expression
   46           | expression • LTE expression
   47           | expression • GTE expression
   48           | expression • AND expression
   49           | expression • OR expression

    EQU   shift, and go to state 47
    NEQU  shift, and go to state 48
    LT    shift, and go to state 49
    GT    shift, and go to state 50
    LTE   shift, and go to state 51
    GTE   shift, and go to state 52
    AND   shift, and go to state 53
    OR    shift, and go to state 54
    ')'   shift, and go to state 84


State 83

   34 final_else_clause: else '(' ')' BLOCK •

    $default  reduce using rule 34 (final_else_clause)


State 84

   31 else_clause_item: else '(' expression ')' • BLOCK

    BLOCK  shift, and go to state 85


State 85

   31 else_clause_item: else '(' expression ')' BLOCK •

    $default  reduce using rule 31 (else_clause_item)
